--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.png">
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>FRC 1792 Scouting — 2026 REBUILT</title>
@@ -1129,4 +1130,5 @@
     })();
 </script>
 </body>
+
 </html>
