--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>FRC 1792 Scouting — 2026 REBUILT</title>
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <style>
         :root{
             --bg:#0b1020;
@@ -1132,5 +1132,6 @@
 </body>
 
 </html>
+
 
 
