--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>FRC 1792 Scouting — 2026 REBUILT</title>
+    <link rel="icon" type="image/png" href="./favicon">
     <style>
         :root{
             --bg:#0b1020;
@@ -1131,6 +1132,7 @@
 </body>
 
 </html>
+
 
 
 
