Refactor code structure for improved readability and maintainability

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>FRC 1792 Scouting — 2026 REBUILT</title>
-    <link rel="icon" type="image/png" href="./favicon">
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
     <style>
         :root{
             --bg:#0b1020;
