--- a/index.html
+++ b/index.html
@@ -215,6 +215,7 @@
             background: linear-gradient(135deg, rgba(0,217,255,.1), rgba(29,92,255,.1));
             opacity: 0;
             transition: opacity 0.4s;
+            pointer-events: none;
         }
         
         .card:hover{
