Refactor match scouting app: Update HTML title, add team selection, and improve JavaScript structure. Introduce Google Apps Script for data handling and implement new JS file for match scouting logic.

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <a href="pit-scouting.html" class="mode-card">
                 <div class="mode-icon">🔧</div>
                 <div class="mode-content">
-                    <h2>Pit Scouting</h2>
+                    <h2>Pit Scouting - In Progress</h2>
                     <p>Collect robot capabilities and team information</p>
                 </div>
                 <div class="mode-arrow">→</div>
