Fix typo in team selection note for 2026 Appleton District Event

--- a/match-scouting.html
+++ b/match-scouting.html
@@ -77,7 +77,7 @@
                             <div id="autocompleteResults" class="autocomplete-results"></div>
                         </div>
                         <div class="note" style="margin-top:8px">
-                            Select a team from the dropdown (must be from the 2026 Appleton District Event - 2026wiapp.
+                            Select a team from the dropdown (must be from the 2026 Appleton District Event - 2026wiapp).
                         </div>
                     </div>
 
