--- a/pit-scouting.html
+++ b/pit-scouting.html
@@ -142,6 +142,22 @@
                     </div>
 
                     <div class="col-12">
+                        <label>Ground intake? *</label>
+                        <div class="seg" id="groundIntakeSeg">
+                            <div class="chip" data-value="Yes">Yes</div>
+                            <div class="chip" data-value="No">No</div>
+                        </div>
+                    </div>
+
+                    <div class="col-12">
+                        <label>Hopper? *</label>
+                        <div class="seg" id="hopperSeg">
+                            <div class="chip" data-value="Yes">Yes</div>
+                            <div class="chip" data-value="No">No</div>
+                        </div>
+                    </div>
+
+                    <div class="col-12">
                         <label>Special features / mechanisms</label>
                         <textarea id="specialFeatures" placeholder="Describe any unique robot features, mechanisms, or capabilities..."></textarea>
                     </div>
